[package]
name = "effects_examples"
version =  "0.0.1"
authors = ["Gabrielle Oliveira <you@gabx.io>"]
description = "Algebraic effects on Nighly Rust"
repository = "https://github.com/aripiprazole/naloxone"
keywords = ["coroutines"]
categories = ["Development tools"]
edition = "2024"
license = "MIT"

[dependencies]
effects = { path = "../" }
