[package]
name = "effects_macros"
version =  "0.0.1"
authors = ["Gabrielle Oliveira <you@gabx.io>"]
description = "Algebraic effects on Nighly Rust"
repository = "https://github.com/aripiprazole/naloxone"
keywords = ["coroutines"]
categories = ["Development tools"]
edition = "2024"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
quote = "1.0.46"
proc-macro2 = "1.0.106"
